--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.0.3"
   },
   "scripts": {
