--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/x": "^1.0.5",
     "@douyinfe/semi-icons": "^2.72.0",
     "@douyinfe/semi-ui": "^2.71.2",
+    "antd": "^5.24.3",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^18.0.0",
